# assyncHttp-Db

./: .dockerignore  README.MD  config.py  jsonplaceholder_requests.py  logger.py  main.py  pyproject.toml  work_to_db.py
alembic/: env.py
alembic/versions/: 2024_11_17_1402-d8e26ce0c4e7_.py
models/: __init__.py  base.py  posts.py  users.py
